# mixin_system_demo

./: .gitignore  AGENTS.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.weaved/: demo_game_utils.py
demo_game/: patches.py  run_demo.py  utils.py
demo_game/game/player/: player.py
docs/: library_usage.md  library_usage_zh.md
mixin_system/: __init__.py  api.py  bootstrap.py  builtin_handlers.py  debug.py  errors.py  hook.py  location.py  location_utils.py  model.py  registry.py  runtime.py  runtime_helpers.py  selector.py  transformer.py  weave.py
src/demo_game/: patches.py  run_demo.py
src/demo_game/game/player/: player.py
src/demo_game/network/: client.py  patches.py
src/mixpy/: __init__.py  __init__.pyi  api.py  bootstrap.py  builtin_handlers.py  debug.py  handlers.py  hook.py  location.py  location_utils.py  registry.py  runtime.py  transformer.py  weave.py
tests/: conftest.py  test_api_ui.py  test_demo.py  test_inject_policy.py  test_network_demo.py  test_new_features.py  test_registry_resolver.py  test_run_demo_ui.py  test_runtime_unit.py  test_selector_unit.py  test_weave_unit.py
