[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "mixpy"
version = "0.1.0"
description = "Import-time AST mixin injection framework for Python"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "MixPy Contributors" }]
keywords = ["ast", "mixin", "injection", "metaprogramming", "import-hook"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries",
]

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.hatch.build.targets.wheel]
packages = ["src/mixpy"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
